# tutorial-polars

./: .gitignore  get_tutorial_data.ipynb  pyproject.toml  tutorial.ipynb  tutorial_complete.ipynb  tutorial_empty.ipynb  tutorial_old.ipynb
data/: trade_i_baci_a_17__2022_SAMPLE.parquet
src/tutorial_polars/: __init__.py
