[project]
name = "tutorial-polars"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Mikhael Gaster", email = "mikhaelgaster@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.2.3",
    "polars>=1.26.0",
    "pyarrow>=19.0.1",
]

[project.scripts]
tutorial-polars = "tutorial_polars:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "ipykernel>=6.29.5",
    "isort>=6.0.1",
    "mypy>=1.15.0",
    "ruff>=0.11.2",
]
